added support for typed parameters in js components